--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="destack">
             <div class="container">
                 <h2>Carros elétricos no Brasil</h2>
-                <img class="img-fluid rounded-3"src="./img/main.jpg" alt="foto carro elétrico" >
+                <img class="img-fluid"src="./img/main.jpg" alt="foto carro elétrico" >
             </div>
         </div></section>
         <section>
